--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -3,9 +3,10 @@
 {{ partial:head }}
 <body class="text-center bg-gradient-to-br from-orange-300 to-amber-700">
 {{ partial:header }}
-
-<div class="container max-w-lg mx-auto py-8">
+<main>
     {{ template_content }}
-</div>
+</main>
+{{ partial:footer }}
+{{ partial:google_analytics }}
 </body>
 </html>
