make footer sticky

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="de">
 {{ partial:head }}
-<body class="text-center bg-gradient-to-br from-orange-300 to-amber-700">
+<body class="text-center bg-gradient-to-br from-orange-300 to-amber-700 flex flex-col min-h-screen">
 {{ partial:header }}
-<main>
+<main class="flex-grow">
     {{ template_content }}
 </main>
 {{ partial:footer }}
