make quote dynamic

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -4,8 +4,8 @@
 <body class="
     text-center
     bg-gradient-to-br from-orange-300 to-amber-700
-    flex flex-col min-h-screen
-">
+    flex flex-col min-h-screen"
+>
 {{ partial:header }}
 <main class="flex-grow">
     {{ template_content }}
