--- a/resources/views/header/_hero.antlers.html
+++ b/resources/views/header/_hero.antlers.html
@@ -1,10 +1,10 @@
 <section class="mt-10 mx-auto max-w-7xl px-4
-    sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28
-">
+    sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28"
+>
     <div class="sm:text-center lg:text-left">
         <h1 class="text-4xl tracking-tight font-extrabold text-gray-900
-            sm:text-5xl md:text-6xl
-        ">
+            sm:text-5xl md:text-6xl"
+        >
             <span class="block xl:inline">{{ title }}</span>
             {{ if slogan }}
             <span class="mt-2.5 block text-cyan-700 xl:inline">{{ slogan }}</span>
@@ -14,8 +14,8 @@
         {{ if question }}
         <p class="mt-3 text-base
             sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto
-            md:mt-5 md:text-xl lg:mx-0
-        ">{{ question }}</p>
+            md:mt-5 md:text-xl lg:mx-0"
+        >{{ question }}</p>
         {{ /if }}
 
         {{ if action_name && action_url }}
@@ -26,8 +26,8 @@
                     w-full flex items-center justify-center px-8 py-3 border border-transparent
                     text-base font-medium rounded-md text-orange-50 bg-cyan-700
                     hover:bg-orange-300 hover:text-cyan-700
-                    md:py-4 md:text-lg md:px-10
-                ">{{ action_name }}</a>
+                    md:py-4 md:text-lg md:px-10"
+                >{{ action_name }}</a>
             </div>
         </div>
         {{ /if }}
