--- a/resources/views/partials/sets/text.antlers.html
+++ b/resources/views/partials/sets/text.antlers.html
@@ -1,3 +1,9 @@
 <section>
-    {{ text }}
+    <div class="
+            mx-auto max-w-md px-4 py-12
+            sm:max-w-7xl sm:px-6 sm:py-20
+            lg:px-8 lg:py-32"
+    >
+        {{ text }}
+    </div>
 </section>
