--- a/resources/views/partials/sets/section_img_left.antlers.html
+++ b/resources/views/partials/sets/section_img_left.antlers.html
@@ -4,9 +4,9 @@
             relative sm:h-72
             lg:absolute lg:left-0 lg:h-full lg:w-1/2"
         >
-            {{ section_img_left }}
+            {{ img_left }}
             <img class="w-full h-full object-cover" src="{{ url }}" alt="{{ alt }}">
-            {{ /section_img_left }}
+            {{ /img_left }}
         </div>
 
         <div class="
@@ -15,7 +15,7 @@
             lg:px-8 lg:py-32"
         >
             <div class="lg:ml-auto lg:w-1/2 lg:pl-10">
-                {{ section_img_left_text }}
+                {{ img_left_text }}
             </div>
         </div>
     </div>
