--- a/resources/views/partials/sets/section_img_right.antlers.html
+++ b/resources/views/partials/sets/section_img_right.antlers.html
@@ -2,15 +2,15 @@
     <div class="relative">
         <div class="lg:absolute lg:inset-0">
             <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-                {{ section_img_right }}
+                {{ img_right }}
                 <img class="h-56 w-full object-cover lg:absolute lg:h-full" src="{{ url }}" alt="{{ alt }}">
-                {{ /section_img_right }}
+                {{ /img_right }}
             </div>
         </div>
         <div class="relative pt-12 pb-16 px-4 sm:pt-16 sm:px-6 lg:px-8 lg:max-w-7xl lg:mx-auto lg:grid lg:grid-cols-2">
             <div class="lg:pr-8">
                 <div class="max-w-md mx-auto sm:max-w-lg lg:mx-0">
-                    {{ section_img_right_text }}
+                    {{ img_right_text }}
                 </div>
             </div>
         </div>
