--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -8,6 +8,10 @@
 >
 {{ partial:header }}
 <main class="flex-grow">
+    {{ bard_content }}
+    {{ partial src="sets/{type}" }}
+    {{ /bard_content }}
+
     {{ template_content }}
 </main>
 {{ partial:footer }}
