make textblock inherit tables and lists

--- a/resources/views/partials/sets/img_left.antlers.html
+++ b/resources/views/partials/sets/img_left.antlers.html
@@ -17,16 +17,7 @@
             lg:px-8 lg:py-32"
         >
             <div class="lg:w-1/2 lg:ml-auto lg:pl-10">
-                <h2 class="
-                    text-3xl text-cyan-700 font-extrabold tracking-tight
-                    sm:text-4xl"
-                >{{ img_left_textblock_title }}</h2>
-                <div class="
-                    mt-4 text-lg max-w-md mx-auto
-                    sm:max-w-lg lg:mx-0"
-                >
-                    {{ img_left_textblock_content }}
-                </div>
+                {{ partial src="sets/textblock/titleAndTextblock" }}
             </div>
         </div>
     </div>
