--- a/resources/views/partials/sets/img_right.antlers.html
+++ b/resources/views/partials/sets/img_right.antlers.html
@@ -18,16 +18,7 @@
             lg:grid lg:grid-cols-2"
         >
             <div class="lg:pr-10">
-                <h2 class="
-                    text-3xl text-cyan-700 font-extrabold tracking-tight
-                    sm:text-4xl"
-                >{{ img_right_textblock_title }}</h2>
-                <div class="
-                    mt-4 text-lg max-w-md mx-auto
-                    sm:max-w-lg lg:mx-0"
-                >
-                    {{ img_right_textblock_content }}
-                </div>
+                {{ partial src="sets/textblock/titleAndTextblock" }}
             </div>
         </div>
     </div>
