change bards to replicators

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -8,9 +8,9 @@
 >
 {{ partial:header }}
 <main class="flex-grow">
-    {{ bard_content }}
+    {{ replicator_content }}
     {{ partial src="sets/{type}" }}
-    {{ /bard_content }}
+    {{ /replicator_content }}
 
     {{ template_content }}
 </main>
