some table markup

--- a/resources/views/partials/sets/textblock.antlers.html
+++ b/resources/views/partials/sets/textblock.antlers.html
@@ -1,11 +1,8 @@
 <section>
     <div class="
-        relative mx-auto max-w-md pt-12 pb-16 px-4
-        sm:max-w-7xl sm:px-6 sm:py-20
-        lg:px-8 lg:py-32"
+        relative mx-auto max-w-2xl pt-12 pb-16 px-4
+        flex flex-col items-center "
     >
-        <div class="lg:w-1/2 lg:ml-auto lg:pl-10">
             {{ partial src="sets/textblock/titleAndTextblock" }}
-        </div>
     </div>
 </section>`
