--- a/resources/views/partials/sets/textblock/table.antlers.html
+++ b/resources/views/partials/sets/textblock/table.antlers.html
@@ -1,29 +1,38 @@
-<table>
-    {{ textblock_content_table }}
-    {{ if first && !last }}
-    <thead>
-    <tr>
-        {{ cells }}
-        <th>{{ value }}</th>
-        {{ /cells }}
-    </tr>
-    </thead>
-    {{ else }}
-    {{ if first }}
-    <tbody>
-    {{ /if }}
-    <tr>
-        {{ cells }}
-        {{ if first }}
-        <th>{{ value }}</th>
+<div class="
+    my-4
+    shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
+>
+    <table class="table-auto min-w-full divide-y divide-gray-200">
+        {{ textblock_content_table }}
+        {{ if first && !last }}
+        <thead class="bg-cyan-700">
+        <tr>
+            {{ cells }}
+            <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">
+                {{ value }}
+            </th>
+            {{ /cells }}
+        </tr>
+        </thead>
         {{ else }}
-        <td>{{ value }}</td>
+        {{ if first }}
+        <tbody class="divide-y divide-gray-200">
         {{ /if }}
-        {{ /cells }}
-    </tr>
-    {{ if last }}
-    </tbody>
-    {{ /if }}
-    {{ /if }}
-    {{ /textblock_content_table }}
-</table>
+        <tr>
+            {{ cells }}
+            {{ if first }}
+            <th class="bg-cyan-700 px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">
+                {{ value }}
+            </th>
+            {{ else }}
+            <td class="px-6 py-4 whitespace-nowrap">{{ value }}</td>
+            {{ /if }}
+            {{ /cells }}
+        </tr>
+        {{ if last }}
+        </tbody>
+        {{ /if }}
+        {{ /if }}
+        {{ /textblock_content_table }}
+    </table>
+</div>
