--- a/resources/views/partials/sets/textblock/titleAndTextblock.antlers.html
+++ b/resources/views/partials/sets/textblock/titleAndTextblock.antlers.html
@@ -3,6 +3,11 @@
     sm:text-4xl"
 >{{ textblock_title }}</h2>
 
+<div class="
+    mt-4 text-lg max-w-md mx-auto
+    sm:max-w-lg lg:mx-0"
+>
 {{ textblock_content }}
 {{ partial src="sets/textblock/{type}" }}
 {{ /textblock_content }}
+</div>
