some table & list markup

--- a/resources/views/partials/sets/textblock/list.antlers.html
+++ b/resources/views/partials/sets/textblock/list.antlers.html
@@ -1,5 +1,5 @@
-<ul>
+<ul class="divide-y divide-cyan-700">
     {{ textblock_content_list }}
-    <li>{{ value }}</li>
+    <li class="py-5">{{ value }}</li>
     {{ /textblock_content_list }}
 </ul>
