--- a/resources/views/partials/sets/textblock/table.antlers.html
+++ b/resources/views/partials/sets/textblock/table.antlers.html
@@ -1,14 +1,14 @@
 <div class="
     my-4
-    shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
+    shadow overflow-hidden border-b border-gray-200 rounded-lg"
 >
-    <table class="table-auto min-w-full divide-y divide-gray-200">
+    <table class="min-w-full divide-y divide-gray-200">
         {{ textblock_content_table }}
         {{ if first && !last }}
         <thead class="bg-cyan-700">
         <tr>
             {{ cells }}
-            <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">
+            <th class="px-6 py-3 text-left text-sm font-medium text-white uppercase tracking-wider">
                 {{ value }}
             </th>
             {{ /cells }}
@@ -21,7 +21,7 @@
         <tr>
             {{ cells }}
             {{ if first }}
-            <th class="bg-cyan-700 px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">
+            <th class="bg-cyan-700 px-6 py-3 text-left text-sm font-medium text-white uppercase tracking-wider">
                 {{ value }}
             </th>
             {{ else }}
