--- a/resources/views/_footer.antlers.html
+++ b/resources/views/_footer.antlers.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="mt-12 border-t border-cyan-700 py-8">
         <p class="text-base xl:text-center">
-            &copy; by Silvan Wigert 🦸‍
+            &copy; by Janine & Silvan Wigert 🦸‍
         </p>
     </div>
 </footer>
