--- a/resources/views/partials/sets/form.antlers.html
+++ b/resources/views/partials/sets/form.antlers.html
@@ -1,7 +1,7 @@
 <section>
     <div class="
-        relative mx-auto max-w-md pt-12 pb-16 px-4
-        sm:max-w-7xl sm:px-6 sm:py-20
+        relative mx-auto max-w-2xl pt-12 pb-16 px-4
+        sm:px-6 sm:py-20
         lg:px-8 lg:py-32"
     >
         <h2 class="
@@ -11,7 +11,7 @@
 
         {{ partial src="sets/form/form" }}
 
-        <div class="text-lg">
+        <div class="text-lg pt-8">
             {{ form_description }}
         </div>
     </div>
