--- a/resources/views/partials/sets/form/form.antlers.html
+++ b/resources/views/partials/sets/form/form.antlers.html
@@ -16,32 +16,42 @@
 
 <div class="mt-9 grid grid-cols-1 gap-y-6 sm:grid-cols-10 sm:gap-x-8">
     {{ fields }}
-    <div class="sm:col-span-5">
+    <div class="{{ if handle === 'remarks' }}sm:col-span-10{{ else }}sm:col-span-5{{ /if }}">
         <label class="block text-sm font-medium text-cyan-700"
                for="{{ handle }}"
-        >{{ display }}</label>
-
-            {{ if handle === 'remarks' }}
-            {{ partial src="sets/form/form/date_from" }}
-            {{ else }}
-
-            <div class="mt-1">
-                {{ field }}
-            </div>
-
+        >
+            {{ display }}
+            {{ if validate|contains:required }}
+            *
             {{ /if }}
+        </label>
 
-            {{ if error }}
-            <p class="text-gray-500">{{ error }}</p>
-            {{ /if }}
+        <div class="mt-1">
+            {{ field }}
+        </div>
+
+        {{ if error }}
+        <p class="alert alert-danger">{{ error }}</p>
+        {{ /if }}
 
     </div>
     {{ /fields }}
+
+    <input type="text" class="hidden" name="{{ honeypot ?? 'honeypot' }}">
+
+    <div class="text-center sm:col-span-10">
+        <button type="submit"
+                class="inline-flex justify-center
+                    py-2 px-4 border border-transparent shadow-sm rounded-md
+                    text-sm font-medium text-orange-50 bg-cyan-600
+                    hover:text-cyan-700 hover:bg-orange-50
+                    focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500"
+        >
+            Absenden 📬
+        </button>
+    </div>
+
 </div>
-
-<input type="text" class="hidden" name="{{ honeypot ?? 'honeypot' }}">
-
-<button type="submit">Submit</button>
 {{ /if }}
 
 {{ /form:create }}
