--- a/resources/views/partials/sets/textblock.antlers.html
+++ b/resources/views/partials/sets/textblock.antlers.html
@@ -1,6 +1,6 @@
 <section>
     <div class="
-        relative mx-auto max-w-2xl pt-12 pb-16 px-4
+        relative mx-auto max-w-2xl pt-12 pb-16 px-4 text-cyan-700
         flex flex-col items-center"
     >
             {{ partial src="sets/textblock/titleAndTextblock" }}
