--- a/resources/views/partials/sets/textblock/table.antlers.html
+++ b/resources/views/partials/sets/textblock/table.antlers.html
@@ -8,7 +8,7 @@
         <thead class="bg-cyan-700">
         <tr>
             {{ cells }}
-            <th class="px-6 py-3 text-left text-sm font-medium text-white uppercase tracking-wider">
+            <th class="px-6 py-3 text-left text-sm font-medium text-orange-50 uppercase tracking-wider">
                 {{ value }}
             </th>
             {{ /cells }}
@@ -21,7 +21,7 @@
         <tr>
             {{ cells }}
             {{ if first }}
-            <th class="bg-cyan-700 px-6 py-3 text-left text-sm font-medium text-white uppercase tracking-wider">
+            <th class="bg-cyan-700 px-6 py-3 text-left text-sm font-medium text-orange-50 uppercase tracking-wider">
                 {{ value }}
             </th>
             {{ else }}
