--- a/resources/views/partials/sets/form/form.antlers.html
+++ b/resources/views/partials/sets/form/form.antlers.html
@@ -1,13 +1,13 @@
 {{ form:create in="{form_form|raw}" }}
 
 {{ if success }}
-<div class="bg-green-300 text-white p-2">
+<div class="bg-green-300 text-orange-50 p-2">
     {{ success }}
 </div>
 {{ else }}
 
 {{ if errors }}
-<div class="bg-red-300 text-white p-2">
+<div class="bg-red-300 text-orange-50 p-2">
     {{ errors }}
     {{ value }}<br>
     {{ /errors }}
