--- a/resources/views/partials/sets/textblock/titleAndTextblock.antlers.html
+++ b/resources/views/partials/sets/textblock/titleAndTextblock.antlers.html
@@ -1,10 +1,10 @@
 <h2 class="
-    text-3xl text-cyan-700 font-extrabold tracking-tight
+    text-3xl font-extrabold tracking-tight
     sm:text-4xl"
 >{{ textblock_title }}</h2>
 
 <div class="
-    mt-4 text-lg max-w-md mx-auto
+    mt-4 text-lg max-w-md mx-auto text-orange-50
     sm:max-w-lg lg:mx-0"
 >
 {{ textblock_content }}
