--- a/resources/views/partials/sets/gallery.antlers.html
+++ b/resources/views/partials/sets/gallery.antlers.html
@@ -18,7 +18,7 @@
         >
             {{ gallery_pictures }}
             <div class="
-                w-1/2 h-44 p-1 overflow-hidden
+                w-1/2 p-1 overflow-hidden
                 sm:w-1/3 p-2
                 md:w-1/4
                 lg:w-1/5
@@ -26,8 +26,22 @@
             >
                 <a class="glightbox"
                    data-gallery="gallery{{ gallery_number }}"
-                   href="{{ url }}">
-                    <img src="{{ url }}" alt="{{ alt }}"/>
+                   href="{{ url }}"
+                >
+                    <picture>
+                        {{ if extension !== 'svg' }}
+                        <source srcset="{{ glide :src="url" width="240" height="240" format="webp" }}" type="image/webp">
+                        {{ /if }}
+                        {{ glide:url width="240" height="240" }}
+                        <img
+                            src="{{ url }}"
+                            alt="{{ alt }}"
+                            width="{{ width }}"
+                            height="{{ height }}"
+                            loading="lazy"
+                        />
+                        {{ /glide:url }}
+                    </picture>
                 </a>
             </div>
             {{ /gallery_pictures }}
