--- a/resources/views/partials/sets/_img_left.antlers.html
+++ b/resources/views/partials/sets/_img_left.antlers.html
@@ -14,7 +14,7 @@
             sm:max-w-7xl sm:px-6 sm:py-20
             lg:px-8 lg:py-32"
         >
-            <div class="lg:w-1/2 lg:ml-auto lg:pl-10">
+            <div class="lg:w-1/2 lg:ml-auto lg:pl-10 text-cyan-700">
                 {{ partial src="sets/textblock/titleAndTextblock" }}
             </div>
         </div>
