--- a/resources/views/partials/sets/_img_right.antlers.html
+++ b/resources/views/partials/sets/_img_right.antlers.html
@@ -15,7 +15,7 @@
             lg:px-8 lg:py-32
             lg:grid lg:grid-cols-2"
         >
-            <div class="lg:pr-10">
+            <div class="lg:pr-10 text-cyan-700">
                 {{ partial src="sets/textblock/titleAndTextblock" }}
             </div>
         </div>
