build for production

--- a/resources/views/header/_image.antlers.html
+++ b/resources/views/header/_image.antlers.html
@@ -1,7 +1,7 @@
 {{ if header_img }}
 <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
     {{ header_img }}
-    {{ partial src="sets/img" classes="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" }}
+    {{ partial src="sets/img" classes="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" width="1024" }}
     {{ /header_img }}
 </div>
 {{ /if }}
