--- a/resources/views/partials/sets/_img_right.antlers.html
+++ b/resources/views/partials/sets/_img_right.antlers.html
@@ -5,7 +5,7 @@
             lg:absolute lg:right-0 lg:h-full lg:w-1/2"
         >
             {{ img_right_picture }}
-            {{ partial src="sets/img" classes="w-full h-full object-cover" }}
+            {{ partial src="sets/img" classes="w-full h-full object-cover" width="1024" }}
             {{ /img_right_picture }}
         </div>
 
