--- a/resources/views/partials/sets/_quote.antlers.html
+++ b/resources/views/partials/sets/_quote.antlers.html
@@ -15,7 +15,7 @@
                             lg:aspect-none lg:h-full"
                         >
                             {{ quote_img }}
-                            {{ partial src="sets/img" classes="lg:w-full lg:h-full object-cover" }}
+                            {{ partial src="sets/img" classes="lg:w-full lg:h-full object-cover" width="420" }}
                             {{ /quote_img }}
                         </div>
                     </div>
