--- a/resources/views/partials/sets/_gallery.antlers.html
+++ b/resources/views/partials/sets/_gallery.antlers.html
@@ -26,7 +26,7 @@
             >
                 <a class="glightbox"
                    data-gallery="gallery{{ gallery_number }}"
-                   href="{{ url }}"
+                   href="{{ glide:url width="1920" }}"
                 >
                     <picture>
                         {{ if extension !== 'svg' }}
