some hacky thing, that I did, because I was to lazy -- will be removed in the future, I guess

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,3 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* hack, weil ich gerade kein Macbook mehr habe und keine Lust, alles auf Windows richtig zu installieren */
+.fc-event-title {
+    font-size: 0;
+}
+
+.fc-event-title::before {
+    content: 'Wohnung besetzt';
+    font-size: 14px;
+}
